# qlbm

./: .buildinfo  .gitignore  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/code/: base_comps.doctree  comps_base.doctree  comps_collision.doctree  comps_cqlbm.doctree  comps_lga.doctree  comps_lqlga.doctree  comps_stqbm.doctree  cqlbm_comps.doctree  index.doctree  infra.doctree  lattice.doctree  stqlbm_comps.doctree  tools.doctree
.doctrees/examples/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  format.yml  release.yml  tests.yml  typecheck.yml
Docker/: README.md  build_cpu.Dockerfile  build_cpu.Dockerfile.dockerignore  build_gpu.Dockerfile
_downloads/004585b484814bada58037da12b48dea/: cqlbm_comps-14.py
_downloads/01e4f2a9239ae2637c465f7305a3009c/: comps_lga-15.py
_downloads/0a5045c9bd0acb9b293fd2b75c220ebc/: cqlbm_comps-7.py
_downloads/0ecfa90e91389eeb7efa9fb853788edc/: comps_cqlbm-17.py
_downloads/12b3361025744a22e8fcf5fec685910f/: cqlbm_comps-2.py
_downloads/214c414241338f683c152aa5e9d09c88/: infra-4.py
_downloads/317a06545104eadfb7fce2a26d065819/: cqlbm_comps-9.py
_downloads/3a48972ab6ff70c066e75c993387edfd/: comps_cqlbm-4.py
_downloads/40641c44712f317065c56baa30a3e875/: comps_cqlbm-21.py
_downloads/54e6daf8cb3b390d5c1d4914e4c4f850/: comps_lga-1.py
_downloads/55cb0058b56c813060e07f219ea6807f/: infra-1.py
_downloads/55f2bd119c621bf8142a6bea4a34fc1c/: cqlbm_comps-6.py
_downloads/5b38d45279953125f19683a2b4dc0a11/: comps_cqlbm-14.py
_downloads/5e7cfffe134f1bae0f553cdcb3f0baa4/: comps_lqlga-4.py
_downloads/5fe5bb6c3bd4d831d54fd98928c31dde/: comps_collision-1.py
_downloads/6af83cb2fe15e48e46a617a3037ca2a9/: comps_stqbm-5.py
_downloads/6e4390ac210228182154c63e1f1a8a03/: comps_lga-10.py
_downloads/73469713a8695afc6e9f636c626240cb/: comps_cqlbm-10.py
_downloads/804dd595bd078154ee9d5d6e867142e9/: comps_lqlga-2.py
_downloads/8d32e0d172f1827bfc0ab67e9d091c57/: comps_stqbm-4.py
_downloads/8f09336ec5f285e1d0dc0c6f58875d27/: comps_cqlbm-11.py
_downloads/9c77219791ed5a9017159e750eeea0de/: cqlbm_comps-15.py
_downloads/9f62098c7162ace0437ac07029e7419b/: lattice-1.py
_downloads/9fc2145db4c70ebd917bc22d1e2ababc/: infra-5.py
_downloads/a21f2755bc2aeb1f6fc5c0233e7e1f1f/: comps_cqlbm-16.py
_downloads/a2d48c36a20fe29042affa31bfd7d763/: comps_cqlbm-8.py
_downloads/ae8faf8a6bb4cf2ecabd6a4c2157acfa/: cqlbm_comps-5.py
_downloads/afc6698447143abb09094d4c8358bd1c/: cqlbm_comps-11.py
_downloads/b6b4bb1751c7842760fd0d29d152cd76/: comps_cqlbm-19.py
_downloads/c60a849fef786a9deb250fe4fd522253/: stqlbm_comps-3.py
_downloads/cebc4f0ba94ec8a6c4ab070e23be1776/: cqlbm_comps-8.py
_downloads/cf37a0900ced6ac0cf10770e3ec79764/: comps_cqlbm-12.py
_downloads/d3b0fae194420678ac1ed2fcb30f4c68/: comps_cqlbm-1.py
_downloads/d425555e37d056388c1e4ac9acd51599/: lattice-2.py
_downloads/d6e46366ac33112cd6b943c88cb7401f/: infra-3.py
_downloads/daa6533c0f2017386764a347307fa70a/: comps_cqlbm-7.py
_downloads/dc3f5eadc766a14633d0cbd05cdbd46b/: cqlbm_comps-13.py
_downloads/e70dd8b599050e83d2ccf96390fbe8d0/: lattice-5.py
_downloads/f3094b564d9422c15115dafb56c2a3fa/: comps_cqlbm-13.py
_downloads/f367831e1951031dfb321739c66f793f/: comps_lqlga-1.py
_downloads/f6c24a52fd0597373cff2378148e209b/: cqlbm_comps-4.py
_downloads/fd3c6cc37c6f373054562e51811d33f0/: lattice-3.py
_sources/: index.rst.txt
_sources/code/: comps_base.rst.txt  comps_collision.rst.txt  comps_stqbm.rst.txt  cqlbm_comps.rst.txt  index.rst.txt  lattice.rst.txt  stqlbm_comps.rst.txt
_sources/examples/: index.rst.txt
_static/css/: custom.css
code/: base_comps.html  comps_base.html  comps_collision.html  comps_cqlbm.html  comps_lga.html  comps_lqlga.html  comps_stqbm.html  cqlbm_comps.html  index.html  infra.html  lattice.html  stqlbm_comps.html  tools.html
demos/: README.md
demos/benchmarks/: algorithm_scalability.ipynb  algorithm_scalability_logging.conf  compilers.conf  compilers.py  qiskit_qulacs_comparison.ipynb  qiskit_qulacs_comparison.py  qiskit_qulacs_comparison_logging.conf  statevector_snapshots.ipynb  statevector_snapshots.py  statevector_snapshots_logging.conf
demos/lattices/: 1d_8_D1Q3_0_obstacle.json  1d_8_D1Q3_1_obstacle.json  2d_16x16_0_obstacle.json  2d_16x16_0_obstacle_q4.json  2d_16x16_1_obstacle.json  2d_16x16_2_obstacle.json  2d_16x16_2_obstacle_mixed.json  2d_16x16_3_obstacle.json  2d_32x32_0_obstacle.json  2d_32x32_1_obstacle.json  2d_32x32_2_obstacle.json  2d_32x32_2_obstacle_mixed.json  2d_32x32_3_obstacle.json  2d_32x32_7_obstacle.json  2d_4x8_0_obstacle_q4.json  2d_64x64_0_obstacle.json  2d_64x64_1_obstacle.json  2d_64x64_2_obstacle.json  2d_64x64_3_obstacle.json  2d_8x8_0_obstacle.json  2d_8x8_1_obstacle.json  2d_8x8_2_obstacle.json  3d_16x16x16_0_obstacle.json  3d_16x16x16_1_obstacle.json  3d_8x8x4_1_obstacle.json  3d_8x8x8_0_obstacle.json  3d_8x8x8_1_obstacle.json  eight.json
demos/openqasm/: load_and_run.py  qasm_export.py  qasm_export_logging.conf
demos/simulation/: ab_simulation.ipynb  collisionless_simulation.ipynb  lqlga_simulation.ipynb  ms_simulation.ipynb  spacetime_simulation.ipynb
demos/visualization/: amplitude_components.ipynb  collisionless_components.ipynb  components.py  flowfields.ipynb  geometry.ipynb  geometry.py  lqlga_components.ipynb  spacetime.py  spacetime_components.ipynb
docs/source/: components.rst  conf.py  (+5 more)
examples/: index.html
qlbm/: __init__.py
tutorial-examples/: README.md  tut-01-cqbm-2d-visualization.ipynb  tut-02-cqbm-3d-visualization.ipynb  tut-03-geometry-visualization.ipynb  tut-04-cqbm-2d-simulation.ipynb  tut-05-cqbm-advanced-simulation.ipynb  tut-06-stqbm-visualization.ipynb  tut-07-stqbm-simulation.ipynb  tut-08-stqbm-fully-quantum.ipynb  tut-09-stqbm-boundaries.ipynb  tut-10-stqbm-advanced-boundaries.ipynb  utilities.py
(+351 files in other folders)
